[package]
name = "oc-wasm-sys"
version = "0.1.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2018"
description = "Raw FFI bindings to the OC-Wasm system call interface"
repository = "https://gitlab.com/Hawk777/oc-wasm-sys"
license = "GPL-3.0-only"
keywords = ["minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]
resolver = "2"

[dependencies.ordered-float]
default-features = false
version = "^2.5"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
